amend main background color due to contrast issues

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,7 +1,7 @@
 /* General styles */
 
 body {
-    background-color: #786F52;
+    background-color: #A89E80;
 }
 
 nav {
